--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: CombatElite
 version: ${project.version}
-main: CombatElite
+main: me.randomHashTags.CombatElite.CombatElite
 author: RandomHashTags
